temp fix for row men clipping

--- a/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
+++ b/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
@@ -37,9 +37,9 @@ $cell-edit-background-edit: #f3f8fe;
 }
 
 
-//.inlineEditing .agGrid .ag-body-container {
-//    margin-bottom: 330px;
-//}
+.inlineEditing .agGrid .ag-body-container {
+    margin-bottom: 330px;
+}
 
 .inlineEditing .agGrid .selectAllCheckbox,
 .inlineEditing .agGrid .ag-selection-checkbox
@@ -48,9 +48,14 @@ $cell-edit-background-edit: #f3f8fe;
 }
 
 //This allows agGrid rows pop up menus to scroll into view instead of being clipped off and inaccessible
-.ag-body {
-    overflow: auto;
-}
+//.ag-body {
+//    overflow: auto;
+//}
+
+//This keeps the checkbox header fixed
+//.ag-pinned-left-header {
+//    position: fixed;
+//}
 
 //This allows .editTools to be on top, when scrolling horizontally
 .ag-scrolls .ag-header-container {
@@ -112,6 +117,7 @@ $cell-edit-background-edit: #f3f8fe;
     }
     .ag-header-viewport {
         overflow:visible;
+        position: fixed;
     }
     .ag-header-cell-menu-button>.dropdown {
         padding-top:1px;
