--- a/ui/client-react/src/components/nav/leftNav.scss
+++ b/ui/client-react/src/components/nav/leftNav.scss
@@ -67,6 +67,7 @@ $left-nav-horizontal-icon-border-color: $color32;
     .leftNav.expanded {
         width: 200px;
         transition:width 100ms ease;
+        z-index: 10;
     }
 }
 
@@ -74,6 +75,7 @@ $left-nav-horizontal-icon-border-color: $color32;
     .leftNav.expanded {
         width: 220px;
         transition:width 100ms ease;
+        z-index: 10;
     }
 }
 
@@ -81,6 +83,7 @@ $left-nav-horizontal-icon-border-color: $color32;
     .leftNav.expanded {
         width: 300px;
         transition:width 100ms ease;
+        z-index: 10;
     }
 }
 
